<resources>
    <string name="family_account">Perhe ja tili</string>
    <string name="family_members_invites">Perheenjäsenet ja kutsut</string>
    <string name="about_family_tasks">Tietoa yhteisistä tehtävistä</string>
    <string name="continue_action">Jatka</string>
    <string name="details_expanded">Laajennettu</string>
    <string name="details_collapsed">Suljettu</string>
    <string name="about_settings">Tietoa näistä asetuksista</string>
    <string name="this_app">Sovelluksen asetukset</string>
    <string name="voice_settings_heading">Puhu ja tarkista teksti</string>
    <string name="voice_offline_setup">Puhe ilman verkkoyhteyttä</string>
    <string name="voice_not_downloaded">Ei ladattu</string>
    <string name="voice_audio_short">Kun asetus on pois, ääni poistetaan tekstiksi muuntamisen tai epäonnistumisen jälkeen.</string>
    <string name="voice_privacy_details">Tietosuoja ja tallennustila</string>
    <string name="account_switch">Vaihda tiliä</string>
    <string name="account_switch_warning">Tallennetut työt jäävät tämän tilin suojaan. Saat ne käyttöön kirjautumalla samalle tilille. Tallenna ensin palautustiedosto, jos tarvitset erillisen kopion.</string>
    <string name="account_sign_out_warning">Tallennetut työt jäävät laitteelle tämän tilin suojaan. Jatka kirjautumalla samalle tilille. Tallenna ensin palautustiedosto, jos tarvitset erillisen kopion.</string>
    <string name="account_remove_device_data">Poista tiedot tältä laitteelta</string>
    <string name="account_delete_warning">Poistaa tältä laitteelta pysyvästi tilin paikalliset tehtävät, luonnokset ja äänitykset, myös vielä synkronoimattomat työt. Jo synkronoidut yhteiset tehtävät jäävät perheelle. Tallenna palautustiedosto ennen poistoa, jos tarvitset paikalliset kopiot. Poistoa ei voi kumota.</string>
    <string name="account_registration_warning">Yhdistää laitteen uudelleen. Tallennetun tekstin voi palauttaa. Vanhoja toimintoja ei lähetetä perheelle automaattisesti.</string>
    <string name="account_revoke_title">Katkaise vanhan laitteen yhteys</string>
    <string name="account_revoke_warning">Valittu vanha laite ei voi enää lähettää muutoksia. Ota talteen sen synkronoimattomat työt ennen jatkamista.</string>
    <string name="recovery_empty">Täällä ei ole palautettavaa tekstiä.</string>
    <string name="recovery_review">Tarkista tallennettu teksti</string>
    <string name="recovery_backup">Tallenna palautustiedosto</string>
    <string name="recovery_recordings">Palauta vanhat äänitykset</string>
    <string name="recovery_formats">JSON-palautustiedoston voi tuoda Bun Do -sovellukseen. Tekstitiedoston voi lukea tai kopioida muualle.</string>
    <string name="recovery_text_invalid">Teksti on liian pitkä kopioitavaksi tehtäväksi. Ota se talteen palautustiedostoon.</string>
    <string name="reminders_details">Näin muistutukset toimivat</string>
    <string name="adventure_empty_heading">Mitä tehtäisiin yhdessä?</string>
    <string name="adventure_add_tasks">Lisää tehtäviä listalle</string>
    <string name="adventure_how">Näin seikkailut toimivat</string>
    <string name="adventure_how_body">Bun voi ehdottaa seikkailuja vähintään kolmesta sopivasta päätehtävästä. Voit myös suunnitella jotain uutta. Tarkistat suunnitelman ennen perheen yhteisen seikkailun aloittamista.</string>
    <string name="guided_no_limit">Ei aikarajaa</string>
    <string name="guided_minutes_preset">%1$s min</string>
    <string name="progress_empty_period">Tällä jaksolla ei ole vielä valmistuneita tehtäviä. Valmis tehtävä lasketaan mukaan synkronoinnin jälkeen.</string>
    <string name="progress_how">Näin tehtävät lasketaan</string>
    <string name="journey_how">Näin matka etenee</string>
    <string name="account_delete_confirm">Poista ja kirjaudu ulos</string>
</resources>
